--- a/код/static/css/style.css
+++ b/код/static/css/style.css
@@ -1,4 +1,79 @@
-h1{
-color: red;
+*{
+margin: 0;
+padding: 0;
 }
 
+html, body{
+height: 100%;
+}
+
+
+/* MAIN MENU */
+
+.header{
+    height: 140px;
+    background: linear-gradient(45deg, #122faa, #1919ff, #2a52be);
+}
+
+.main_menu{
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 100px;
+}
+
+.main_menu a{
+    text-decoration: none;
+    color: white;
+    font-weight: 400;
+}
+
+.main_menu li{
+    list-style: none;
+    margin-right: 10px;
+    width: 140px;
+    height: 50px;
+    margin-top: 2.5%;
+    box-shadow: 10px 10px 10px black;
+    font-family: monospace;
+    border-radius: 100px;
+    text-align: center;
+}
+
+.main_menu li:hover{
+    transition-duration: 0.5s;
+    box-shadow: 15px 15px 30px black;
+}
+
+.main_menu{
+    font-size: 20px;
+}
+
+/* WRAPPER */
+
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+/* CONTENT */
+
+.content{
+    width: 60%;
+    margin: 100px auto 0;
+    flex: 1 0 auto;
+}
+
+/* FOOTER */
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    font-size: 15px;
+    font-family: monospace;
+    background: green;
+    flex: 0 0 auto;
+}
