--- a/код/static/css/style.css
+++ b/код/static/css/style.css
@@ -4,9 +4,24 @@ padding: 0;
 }
 
 html, body{
-height: 100%;
+    position: relative;
+	font-family: 'Noto Sans', sans-serif;
+	font-size: 16px;
+	line-height: 1.4;
+	color: #000;
+	min-width: 320px;
+	overflow-x: hidden;
+    height: 100%;
 }
 
+
+/* LOGO */
+
+.logo img{
+    float: left;
+    margin-left: 150px;
+    width: 165px;
+}
 
 /* MAIN MENU */
 
@@ -59,9 +74,15 @@ height: 100%;
 /* CONTENT */
 
 .content{
-    width: 60%;
-    margin: 100px auto 0;
     flex: 1 0 auto;
+}
+
+.content p{
+    text-align: center;
+    font-size: 80px;
+    font-family: monospace;
+    color: #42aaff;
+    margin-top: 20px;
 }
 
 /* FOOTER */
@@ -76,4 +97,68 @@ height: 100%;
     font-family: monospace;
     background: green;
     flex: 0 0 auto;
+}
+
+.container {
+    max-width: 1560px;
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col-md-4 {
+
+}
+
+.product {
+    margin: 30px;
+    outline: 5px #41B3A3 solid;
+    background-color: #41B3A3;
+    max-width: 250px;
+}
+
+.image img {
+    height: 350px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.image {
+    margin-bottom: 10px;
+}
+
+.info h3{
+    font-size: 21px;
+    font-weight: 100;
+    margin-bottom: 0px;
+}
+
+.info-price {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buy {
+    border: none;
+    width: 40px;
+    height: 40px;
+    background-color: green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+.price {
+    font-weight: 700;
+    font-size: 18px;
 }
