--- a/код/static/css/style.css
+++ b/код/static/css/style.css
@@ -4,6 +4,7 @@ padding: 0;
 }
 
 html, body{
+    background: bisque;
     position: relative;
 	font-family: 'Noto Sans', sans-serif;
 	font-size: 16px;
@@ -161,4 +162,91 @@ html, body{
 .price {
     font-weight: 700;
     font-size: 18px;
+}
+
+/* register */
+
+.register {
+}
+
+.register h1{
+    text-align: center;
+    font-size: 80px;
+    font-family: monospace;
+    color: #42aaff;
+    margin-top: 20px;
+}
+
+/* advertisement */
+
+.advertisement {
+    display: flex;
+}
+
+.advertisement h2{
+    text-transform: uppercase;
+    padding-bottom: 10px;
+    border-bottom: 3px solid #E27D60;
+    text-align: center;
+    font-size: 36px;
+    color: #8b00ff;
+    font-weight: 700;
+}
+
+.advertisement form {
+    margin: 0 auto;
+    background: #41B3A3;
+    max-width: 800px;
+    width: 800px;
+    max-height: 550px;
+    height: 500px;
+    padding: 20px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.82);
+}
+
+.group {
+    margin-top: 20px;
+    padding: 5px;
+}
+
+.group input {
+    margin-top: 0px;
+    margin-left: 60px;
+    margin-bottom: 40px;
+    border-radius: 20px/20px;
+    width: 300px;
+    height: 30px;
+    border: none;
+    font-size: 18px;
+    text-align: center;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.82);
+}
+
+.group input:focus{
+    border: none;
+    transform: scale(0.95);
+}
+
+.group lable {
+    padding-left: 80px;
+    padding-top: 0px;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+button {
+    margin-top: -10px;
+    background: #C5C6C7;
+    height: 50px;
+    width: 180px;
+    border-radius: 30px/30px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+button:hover{
+    transition-duration: 0.6s;
+    box-shadow: 15px 15px 30px #AFD275;
+    transform: scale(1.06);
 }
