--- a/код/templates/register.html
+++ b/код/templates/register.html
@@ -60,7 +60,7 @@
                             </div>
                         {% endfor %}
                     </div>
-                    {{message}}
+                    <p>{{message}}</p>
                 </div>
                 <div><center><button>Регистрация</button></center></div>
             </form>
