--- a/код/templates/sell_product.html
+++ b/код/templates/sell_product.html
@@ -1,4 +1,45 @@
 {% extends 'layout.html'%}
 
 {% block content %}
+<div class="advertisement">
+            <form action="" method="post">
+                {{ form.hidden_tag() }}
+                <h2>Публицация</h2>
+                <div class="row">
+                    <div class="group">
+                        <lable for=''>Название</lable><br>{{ form.product_f(class="form-control") }}<br>
+                        {% for error in form.product_f.errors %}
+                            <div class="alert alert-danger" role="alert">
+                                {{ error }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <div class="group">
+                        <lable for=''>Описание</lable><br>
+                        {{ form.about_f(class="form-control") }}<br>
+                        {% for error in form.about_f.errors %}
+                            <div class="alert alert-danger" role="alert">
+                                {{ error }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <div class="group">
+                        <lable for=''>Прикрепите фото</lable><br>
+                        {{ form.photo_f }}
+                    </div>
+                    <div class="group">
+                        <lable for=''>Цена</lable><br>
+                        {{ form.price_f(class="form-control") }}<br>
+                        {% for error in form.price_f.errors %}
+                            <div class="alert alert-danger" role="alert">
+                                {{ error }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <p>{{message}}</p>
+                </div>
+                <div><center><button>Выставить</button></center></div>
+            </form>
+        </div>
+    </nav>
 {% endblock content %}
