cделал сохранение файлов

--- a/код/templates/index.html
+++ b/код/templates/index.html
@@ -11,7 +11,7 @@
             <div class="col-md-4">
                 <div class="product">
                     <div class="image">
-                        <img src="{{url_for('static', filename='img/104273.jpg')}}">
+                        <img src="{{url_for('static', filename='img/profile_pics/' + i.author.name + '/products_image/' + i.photo)}}">
                     </div>
                     <!-- image -->
 
