--- a/код/templates/sell_product.html
+++ b/код/templates/sell_product.html
@@ -1,8 +1,8 @@
 {% extends 'layout.html'%}
 
 {% block content %}
-<div class="advertisement">
-            <form action="" method="post">
+<div class="advertisement" xmlns="http://www.w3.org/1999/html">
+            <form action="" method="POST" enctype="multipart/form-data">
                 {{ form.hidden_tag() }}
                 <h2>Публицация</h2>
                 <div class="row">
