--- a/код/templates/layout.html
+++ b/код/templates/layout.html
@@ -44,6 +44,7 @@
 
     <ul class="main_menu">
         <li><a href="{{url_for('home')}}"><p>Главная</p></a></li>
+        <li><a href="#"><p>Сообщения</p></a></li>
         <li><a href="{{url_for('account')}}"><p>Аккаунт</p></a></li>
         <li><a href="{{url_for('sell_product')}}"><p>Продать</p></a></li>
         <li><a href="#zatemnenie"><p>Выход</p></a></li>
