--- a/код/templates/layout.html
+++ b/код/templates/layout.html
@@ -31,7 +31,7 @@
 {% block menu %}
 <header class="header">
     <div class="logo">
-        <img src="{{ url_for('static', filename='img/корзина.jpg')}}" alt="logo">
+        <img src="{{ url_for('static', filename='img/logo.jpg')}}" alt="logo">
     </div>
     {% if current_user.is_authenticated %}
     <div id="zatemnenie">
